--- a/front/registerPage.html
+++ b/front/registerPage.html
@@ -21,6 +21,7 @@
         <input type="password" id="password" placeholder="Entrez votre mot de passe" required>
         <p>Confirmer le mot de passe</p>
         <input type="password" id="confirm_password" placeholder="Confirmez votre mot de passe" required>
+        <Post>username, </Post>
     </main>
 </body>
 </html></html>
