essaie page html

--- a/front/login.html
+++ b/front/login.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Connexion - Clone Reddit</title>
-  <link rel="stylesheet" href="./style/main.css" />
+  <link rel="stylesheet" href="static/main.css" />
 </head>
 <body>
-  <div class="login-container">
+  <div class="login-container"> 
     <h1>Connexion</h1>
     <form id="loginForm">
       <label for="email">Email</label>
@@ -16,11 +16,12 @@
       <label for="password">Mot de passe</label>
       <input type="password" id="password" required />
 
-      <button type="submit">Se connecter</button>
+      <button type="submit" >Se connecter</button>
       <p id="error" class="error-message"></p>
+      <p>Pas encore de compte ? <a href="register.html">Inscrivez-vous ici</a></p>
     </form>
   </div>
 
-  <script src="./js/login.js"></script>
+<script src="js/login.js"></script>
 </body>
 </html>
