--- a/front/login.html
+++ b/front/login.html
@@ -10,8 +10,8 @@
   <div class="login-container"> 
     <h1>Connexion</h1>
     <form id="loginForm">
-      <label for="email">Email</label>
-      <input type="email" id="email" required />
+      <label for="mail">Email</label>
+      <input type="mail" id="mail" required />
 
       <label for="password">Mot de passe</label>
       <input type="password" id="password" required />
