--- a/front/home.html
+++ b/front/home.html
@@ -13,30 +13,19 @@
       padding: 0;
     }
     header {
-      background-color: #ff4500;
-      color: white;
-      padding: 15px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 24px;
-    }
-    header button {
-      background-color: #ffffff22;
-      border: none;
-      padding: 8px 15px;
-      border-radius: 4px;
-      color: white;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-    }
-    header button:hover {
-      background-color: #ffffff44;
-    }
+  background-color: #ff4500;
+  color: white;
+  padding: 15px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header > div {
+  display: flex;
+  gap: 10px;
+}
+
     main {
       max-width: 700px;
       margin: 20px auto;
@@ -65,10 +54,15 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>Bienvenue sur Reddit Clone</h1>
+ <header>
+  <h1>Bienvenue sur Reddit Clone</h1>
+  <div>
+    <button id="createPostBtn">Créer un post</button>
+    <button id="profileBtn">Mon profil</button>
     <button id="logoutBtn">Déconnexion</button>
-  </header>
+  </div>
+</header>
+
 
   <main>
     <section id="postsContainer">
