--- a/front/register.html
+++ b/front/register.html
@@ -13,8 +13,8 @@
       <label for="username">Nom d'utilisateur</label>
       <input type="text" id="username" required />
 
-      <label for="email">Email</label>
-      <input type="email" id="email" required />
+      <label for="mail">Email</label>
+      <input type="mail" id="mail" required />
 
       <label for="password">Mot de passe</label>
       <input type="password" id="password" required />
